// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Avatar/Avatar AvatarPlayground smoke-test 1`] = `
<span class="css-16dwxo9-Box">
  <span class="css-13p3lh2-Box">
    <div class="css-ptimel-Stack">
      <div style="margin: 5px;">
        <div class="css-1b4in8k-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1b4in8k-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1b4in8k-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-1gcb869"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </span>
</span>
`;

exports[`Design System/Avatar/Avatar AvatarWithIcon smoke-test 1`] = `
<span class="css-16dwxo9-Box">
  <span class="css-13p3lh2-Box">
    <div class="css-ptimel-Stack">
      <div style="margin: 5px;">
        <div class="css-1b4in8k-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-1gcb869"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-qqj3fz-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-1s9xtqi"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-izf9z2-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-e18dq8"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1qij8ll-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-djyt3a"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1gxy3k5-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-1nnu39b"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-14vit4z-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <span class="css-dgazu">
            <svg viewbox="0 0 14 17"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
                 class="css-bxqe0z"
            >
              <path d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                    fill="#54587F"
              >
              </path>
              <path d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                    fill="#54587F"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </span>
</span>
`;

exports[`Design System/Avatar/Avatar AvatarWithLetter smoke-test 1`] = `
<span class="css-16dwxo9-Box">
  <span class="css-13p3lh2-Box">
    <div class="css-ptimel-Stack">
      <div style="margin: 5px;">
        <div class="css-1b4in8k-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-qqj3fz-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-izf9z2-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1qij8ll-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1gxy3k5-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-14vit4z-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          JN
        </div>
      </div>
    </div>
  </span>
</span>
`;

exports[`Design System/Avatar/Avatar AvatarWithSrc smoke-test 1`] = `
<span class="css-16dwxo9-Box">
  <span class="css-13p3lh2-Box">
    <div class="css-ptimel-Stack">
      <div style="margin: 5px;">
        <div class="css-1b4in8k-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-qqj3fz-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-izf9z2-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1qij8ll-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-1gxy3k5-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
      <div style="margin: 5px;">
        <div class="css-14vit4z-flex-generateStylesFromTokens-avatarStyle"
             data-testid="_avatar"
        >
          <img src="https://mui.com/static/images/avatar/1.jpg">
        </div>
      </div>
    </div>
  </span>
</span>
`;
